--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,3 +1,8 @@
 [user]
 	email = ryan@rbruno.com
 	name = Ryan Bruno
+[sendemail]
+    #smtpencryption = tls
+    smtpserver = smtp.rbruno.com
+    smtpuser = ryan@rbruno.com
+    smtpserverport = 25
