Added obsidian vault

--- a/mr/.mrconfig
+++ b/mr/.mrconfig
@@ -4,3 +4,6 @@ checkout = git clone 'git@github.com:RyanBruno/dotfiles.git' 'dotfiles'
 
 [src/RyanBruno/tables]
 checkout = git clone 'git@github.com:RyanBruno/tables-project.git' 'tables'
+
+[src/RyanBruno/obsidian]
+checkout = git clone 'git@github.com:RyanBruno/obsidian.git' 'obsidian'
