--- a/mr/.mrconfig
+++ b/mr/.mrconfig
@@ -1,3 +1,8 @@
+[DEFAULT]
+commit = 
+    git add .
+    git commit
+    git push
 
 [src/RyanBruno/dotfiles]
 checkout = git clone 'git@github.com:RyanBruno/dotfiles.git' 'dotfiles'
