--- a/dotfiles/mr/.mrconfig
+++ b/dotfiles/mr/.mrconfig
@@ -1,8 +1,8 @@
 [DEFAULT]
 commit = 
-    git add .
-    git commit
-    git push
+	   git add .
+	   git commit
+	   git push
 
 [src/RyanBruno/dotfiles]
 checkout = git clone 'git@github.com:RyanBruno/dotfiles.git' 'dotfiles'
@@ -12,3 +12,6 @@ checkout = git clone 'git@github.com:RyanBruno/tables-project.git' 'tables'
 
 [src/RyanBruno/obsidian]
 checkout = git clone 'git@github.com:RyanBruno/obsidian.git' 'obsidian'
+
+[.config/home-manager]
+checkout = git clone 'git@github.com:RyanBruno/dotfiles.git' 'home-manager'
